@@ -79,7 +79,7 @@ public class RenameClassParticipant extends RenameParticipant
 
             if(changes.size() == 1)
             {
-                return changes.get(0);
+                return changes.getFirst();
             }
 
             if(changes.size() > 0)
